SERVER-28425 fix QueryPlannerAccess invariant